--- a/src/pages/ticket/ticket.html
+++ b/src/pages/ticket/ticket.html
@@ -13,7 +13,7 @@
         E-Ticket template
       </ion-label>
       <div item-content class="item-content">
-        {{ params.template_id.value }}
+        {{ params.template.value }}
         <ion-icon md="ios-arrow-forward" color="light"></ion-icon>
       </div>
     </button>
@@ -22,7 +22,7 @@
         Event location
       </ion-label>
       <div item-content class="item-content">
-        {{ params.location_id.value }}
+        {{ params.location.value }}
         <ion-icon md="ios-arrow-forward" color="light"></ion-icon>
       </div>
     </button>
