add listTickets and finished with ticket logic

--- a/src/pages/ticket/ticket.html
+++ b/src/pages/ticket/ticket.html
@@ -47,5 +47,6 @@
 </ion-content>
 
 <ion-footer>
+  <button ion-button full outline class="btn-question" (click)="findWithoutNumber()">Don't have E-Ticket number?</button>
   <button large text-capitalize ion-button full color="secondary" no-margin (click)="scan()">Scan</button>
 </ion-footer>
