--- a/src/pages/ticket/ticket-check/ticket-check.html
+++ b/src/pages/ticket/ticket-check/ticket-check.html
@@ -14,19 +14,19 @@
       <ion-row>
         <ion-col col-6>
           <ion-item no-margin no-padding>
-            <ion-input type="text" placeholder="First name" [(ngModel)]="searchObj.first_name"></ion-input>
+            <ion-input type="text" placeholder="First name" [(ngModel)]="params.firstName"></ion-input>
           </ion-item>
         </ion-col>
         <ion-col col-6>
           <ion-item no-margin no-padding>
-            <ion-input type="text" placeholder="Last name" [(ngModel)]="searchObj.last_name"></ion-input>
+            <ion-input type="text" placeholder="Last name" [(ngModel)]="params.lastName"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col col-12>
           <ion-item no-margin no-padding>
-            <ion-input type="email" placeholder="Email" [(ngModel)]="searchObj.email"></ion-input>
+            <ion-input type="email" placeholder="Email" [(ngModel)]="params.email"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
