--- a/src/pages/ticket/ticket-search-results/ticket-search-results.html
+++ b/src/pages/ticket/ticket-search-results/ticket-search-results.html
@@ -9,28 +9,42 @@
 
 <ion-content>
 
-  <ion-item-divider class="header">
-    <ion-label no-margin>
-      <ion-row text-uppercase margin-right>
-        <ion-col col-6 text-left><span class="col-name">Order ID</span></ion-col>
-        <ion-col col-6 text-right><span class="col-name">Status</span></ion-col>
-      </ion-row>
-    </ion-label>
-  </ion-item-divider>
+  <div *ngIf="listTickets && listTickets.length; else emptyResult">
 
-  <button no-padding ion-item *ngFor="let order of orders" (click)="changeStatus(order)">
-    <ion-label no-margin>
-      <ion-row margin-left align-items-center>
-        <ion-col col-6 text-left>
-          <span class="col-order">{{ order.id }}</span>
-        </ion-col>
-        <ion-col col-6 text-right>
-          <span class="col-status" [style.color]="order.status ? '#35ce76' : '#c1c4cb'">{{ order.status ? 'Valid' : 'Used' }}</span>
-          <ion-icon md="ios-arrow-forward" padding-left color="light"></ion-icon>
-        </ion-col>
-      </ion-row>
-    </ion-label>
-  </button>
+    <ion-item-divider class="header">
+      <ion-label no-margin>
+        <ion-row text-uppercase margin-right>
+          <ion-col col-6 text-left><span class="col-name">Ticket ID</span></ion-col>
+          <ion-col col-6 text-right><span class="col-name">Status</span></ion-col>
+        </ion-row>
+      </ion-label>
+    </ion-item-divider>
+
+    <button no-padding ion-item *ngFor="let ticket of listTickets" (click)="changeStatus(ticket)">
+      <ion-label no-margin>
+        <ion-row margin-left align-items-center>
+          <ion-col col-6 text-left>
+            <span class="col-order">{{ ticket.id }}</span>
+          </ion-col>
+          <ion-col col-6 text-right>
+            <span class="col-status" [style.color]="ticket.used_at ? '#c1c4cb' : '#35ce76'">{{ ticket.used_at ? 'Used' : 'Valid' }}</span>
+            <ion-icon md="ios-arrow-forward" padding-left color="light"></ion-icon>
+          </ion-col>
+        </ion-row>
+      </ion-label>
+    </button>
+
+  </div>
+
+  <ng-template #emptyResult>
+    <ion-row class="empty-result">
+      <ion-col col-8 offset-2>
+        <ion-item no-lines no-padding>
+          <p>No tickets found.</p>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ng-template>
 
 </ion-content>
 
