add settingModule, languagePage, editPage, accountPage, fix templates, translate SettingsPage

--- a/src/pages/earning/earning.html
+++ b/src/pages/earning/earning.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar no-border-bottom>
     <ion-title text-center>
-      Earnings
+      <b>Earnings</b>
     </ion-title>
   </ion-navbar>
 
