--- a/src/pages/ticket/ticket-params/ticket-params.html
+++ b/src/pages/ticket/ticket-params/ticket-params.html
@@ -3,7 +3,7 @@
   <ion-navbar>
 
     <ion-buttons left>
-      <button text-capitalize ion-button clear color="clear" (click)="dismiss()" icon-left><ion-icon name="ios-arrow-back"></ion-icon></button>
+      <button class="arrow" text-capitalize ion-button clear color="clear" (click)="dismiss()" icon-left><ion-icon name="ios-arrow-back"></ion-icon></button>
     </ion-buttons>
 
     <ion-title padding-right text-center><b>{{ pageName }}</b></ion-title>
