--- a/src/pages/ticket/ticket.html
+++ b/src/pages/ticket/ticket.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title text-center>
-      E-Ticket Scan
+      <b>E-Ticket Scan</b>
     </ion-title>
   </ion-navbar>
 </ion-header>
