added AddAccountPage and changed EditPage template

--- a/src/pages/settings/edit/edit.html
+++ b/src/pages/settings/edit/edit.html
@@ -23,4 +23,19 @@
 
 <ion-content>
 
+  <ion-list mode="ios">
+    <ion-item>
+      <ion-label>larsrieger<p class="mail">larsrieger@digistore24.com</p></ion-label>
+      <button ion-button item-end clear icon-only (click)="delAccount()"><ion-icon name="ios-trash-outline"></ion-icon></button>
+    </ion-item>
+    <ion-item>
+      <ion-label>max<p class="mail">max@digistore24.com</p></ion-label>
+      <button ion-button clear item-end icon-only (click)="delAccount()"><ion-icon name="ios-trash-outline"></ion-icon></button>
+    </ion-item>
+    <ion-item>
+      <ion-label>FBI<p class="mail">hunter1984@digistore24.com</p></ion-label>
+      <button ion-button clear item-end icon-only (click)="delAccount()"><ion-icon name="ios-trash-outline"></ion-icon></button>
+    </ion-item>
+  </ion-list>
+
 </ion-content>
