comment button 'done' in the EditPage

--- a/src/pages/settings/edit/edit.html
+++ b/src/pages/settings/edit/edit.html
@@ -10,9 +10,9 @@
         <ion-col text-center col-6>
           <ion-title><b>Edit</b></ion-title>
         </ion-col>
-        <ion-col text-right col-3>
-          <button class="done" ion-button float-end text-capitalize clear color="clear" (click)="done()">Done</button>
-        </ion-col>
+        <!--<ion-col text-right col-3>-->
+          <!--<button class="done" ion-button float-end text-capitalize clear color="clear" (click)="done()">Done</button>-->
+        <!--</ion-col>-->
       </ion-row>
     </ion-grid>
 
