--- a/src/pages/settings/add-account/add-account.html
+++ b/src/pages/settings/add-account/add-account.html
@@ -19,7 +19,7 @@
 
     <ion-list>
 
-      <ion-label *ngIf="showedError" class="err-message" no-margin>
+      <ion-label *ngIf="showedError" class="err-message" no-margin text-wrap>
         {{ showedError }}
       </ion-label>
 
