--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -16,7 +16,7 @@
 
     <ion-list>
 
-      <ion-label *ngIf="showedError" class="err-message" no-margin>
+      <ion-label *ngIf="showedError" class="err-message" no-margin text-wrap>
         {{ showedError }}
       </ion-label>
 
